#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([policy-rc.d], [0.0.1], [papilion@hypergeometric.com])
AC_PREFIX_DEFAULT(/usr)
AM_INIT_AUTOMAKE(policy-rc.d, 0.0.1)
AC_OUTPUT(Makefile scripts/Makefile)


# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
